# k8s-sec-stack

./: .gitignore  README.md
.claude/: CLAUDE.md  settings.json.example
charts/k8s-sec-stack/: Chart.yaml  values.yaml
charts/k8s-sec-stack/templates/: NOTES.txt  event-sink-configmap.yaml  event-sink-deployment.yaml  event-sink-pvc.yaml  event-sink-service.yaml  posture-snapshot-configmap.yaml  posture-snapshot-cronjob.yaml  posture-snapshot-rbac.yaml
demo/: vulnerable-workload.yaml
hack/: bootstrap.sh  configure-local.sh
mcp-server/: pyproject.toml
mcp-server/src/k8s_sec_mcp/: server.py
mcp-server/src/k8s_sec_mcp/tools/: k8s.py  posture.py  runtime.py  trivy.py  vulns.py
policies/baseline/: disallow-host-namespaces.yaml  disallow-latest-tag.yaml  disallow-privilege-escalation.yaml  disallow-privileged.yaml  require-non-root.yaml  require-resource-limits.yaml  require-ro-rootfs.yaml
policies/exceptions/: README.md
skills/: fix-image.md  kyverno-create-exception.md  kyverno-create-policy.md  kyverno-suggest.md  posture-check.md  triage-threat.md
tests/kyverno/: kyverno-test.yaml
tests/kyverno/resources/: fail-host-namespaces.yaml  fail-latest-tag.yaml  fail-no-limits.yaml  fail-non-root.yaml  fail-privilege-escalation.yaml  fail-privileged.yaml  fail-writable-rootfs.yaml  pass-pod.yaml
