[project]
name = "k8s-sec-mcp"
version = "0.1.0"
description = "MCP server exposing k8s security CRDs (trivy-operator, kubescape, kyverno, falco) to LLM agents"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "kubernetes>=29.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
k8s-sec-mcp = "k8s_sec_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
